--- a/.github/workflows/deploy-to-render.yml
+++ b/.github/workflows/deploy-to-render.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Build Docker image with cache
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: false  # Only build & test image, no pushing
+          tags: ml-lr-chatbot-api:test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -27,8 +37,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/express-ts-api:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/express-ts-api:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/ml-lr-chatbot-api:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/ml-lr-chatbot-api:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
